--- a/mining.html
+++ b/mining.html
@@ -541,8 +541,7 @@ server=1<br>gen=0<br>#addnode=<br>#addnode=</pre>
       <div class="container">
         <div class="row">
           <div class="col-md-6 copyright">
-            <div class="left-text">Copyright © JagariCoin 2018. All Rights
-              Reserved</div>
+            <div class="left-text">© 2018 <a href="http://www.jagaricoin.tk/">JagariCoin</a>.</div>
           </div>
         </div>
       </div>
