--- a/index.html
+++ b/index.html
@@ -257,8 +257,7 @@ Template Name: ConsulbizTitle: Consulbiz free consulting business bootstrap webs
       <div class="container">
         <div class="row">
           <div class="col-md-6 copyright">
-            <div class="left-text">Copyright © JagariCoin 2018. All Rights
-              Reserved</div>
+            <div class="left-text">© 2018 <a href="http://www.jagaricoin.tk/">JagariCoin</a>.</div>
           </div>
         </div>
       </div>
